--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,4 +32,4 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Deploy static site to S3 bucket
-        run: aws s3 sync dist s3://${{ secrets.AWS_BUCKET }} --delete
+        run: aws s3 sync dist/browser s3://${{ secrets.AWS_BUCKET }} --delete
